--- a/scripts/standard_report_2024-12-18-12-56/index.html
+++ b/scripts/standard_report_2024-12-18-12-56/index.html
@@ -1,5 +1,5 @@
 <h1>GSEE Benchmark Standard Report</h1>
-<p>Report created on 2024-12-18-12-11</p>
+<p>Report created on 2024-12-18-12-56</p>
 <p><a href="https://github.com/isi-usc-edu/qb-gsee-benchmark">https://github.com/isi-usc-edu/qb-gsee-benchmark</a></p>
 <p>Input data: aggregated_solver_labels_2024-12-18-10-18.csv, last modified Wed Dec 18 11:19:33 2024</p>
 <p>Input data: Hamiltonian_features.csv, last modified Mon Dec 16 09:53:12 2024</p>
@@ -32,7 +32,7 @@
 <p>solvability_ratio: 0.0</p>
 <p>f1_score: [0.7558139534883721, 0.8531468531468531]</p>
 <p>ml_metrics_calculator_version: 1</p>
-<p>TODO:  put some charts in here!</p>
+<p>TODO:  put the ML charts in here!</p>
 <h3>Solver DF_QPE, 5dad4064-cd11-412f-85cb-d722afe3b3de</h3>
 <p>solver_short_name: DF_QPE</p>
 <p>performance_metrics_uuid: e9459073-db4a-4ca5-a6c4-746a62762cb9</p>
@@ -50,4 +50,4 @@
 <p>solvability_ratio: 0.009</p>
 <p>f1_score: [0.995049504950495, 0.9629629629629629]</p>
 <p>ml_metrics_calculator_version: 1</p>
-<p>TODO:  put some charts in here!</p>
+<p>TODO:  put the ML charts in here!</p>
