incorporated miniML plots

--- a/scripts/standard_report_2024-12-30-11-25/index.html
+++ b/scripts/standard_report_2024-12-30-11-25/index.html
@@ -1,7 +1,7 @@
 <h1>GSEE Benchmark Standard Report</h1>
-<p>Report created on 2024-12-30-10-29</p>
+<p>Report created on 2024-12-30-11-25</p>
 <p><a href="https://github.com/isi-usc-edu/qb-gsee-benchmark">https://github.com/isi-usc-edu/qb-gsee-benchmark</a></p>
-<p>Input data: aggregated_solver_labels.csv, last modified Mon Dec 30 10:17:20 2024</p>
+<p>Input data: aggregated_solver_labels.csv, last modified Mon Dec 30 10:32:50 2024</p>
 <p>Input data: Hamiltonian_features.csv, last modified Mon Dec 16 11:50:19 2024</p>
 <p>WARNING!  We only have features calculated for 229/230 Hamiltonians. This report is based on partial results!</p>
 <h2>Problem Instance Summary Statistics</h2>
@@ -14,7 +14,8 @@
 <p><img alt="Number of orbitals histogram" src="num_orbitals_histogram.png" /></p>
 <h2>Solver Summary Statistics</h2>
 <p>number of unique participating solvers: 2</p>
-<p><img alt="Solver scatter plot" src="solver_scatter_plot.png" /></p>
+<p><img alt="Solver scatter plot" src="solver_num_orbs_vs_runtime_scatter_plot.png" /></p>
+<p><img alt="Solver scatter plot" src="solver_num_orbs_vs_log_runtime_scatter_plot.png" /></p>
 <h3>Solver DMRG_Niagara_cluster_lowest_energy, 16537433-9f4c-4eae-a65d-787dc3b35b59</h3>
 <p>solver_short_name: DMRG_Niagara_cluster_lowest_energy</p>
 <p>performance_metrics_uuid: 9fa6c773-01b3-4723-afa0-5558e91fddaa</p>
@@ -32,7 +33,8 @@
 <p>solvability_ratio: 0.0</p>
 <p>f1_score: [0.7558139534883721, 0.8531468531468531]</p>
 <p>ml_metrics_calculator_version: 1</p>
-<p>TODO:  put the ML charts in here!</p>
+<p><img alt="Solver miniML plot" src="plot_solver_16537433-9f4c-4eae-a65d-787dc3b35b59.png" /></p>
+<p><img alt="SHAP summary plot" src="shap_summary_plot_solver_16537433-9f4c-4eae-a65d-787dc3b35b59.png" /></p>
 <h3>Solver DF_QPE, 5dad4064-cd11-412f-85cb-d722afe3b3de</h3>
 <p>solver_short_name: DF_QPE</p>
 <p>performance_metrics_uuid: e9459073-db4a-4ca5-a6c4-746a62762cb9</p>
@@ -50,4 +52,5 @@
 <p>solvability_ratio: 0.009</p>
 <p>f1_score: [0.995049504950495, 0.9629629629629629]</p>
 <p>ml_metrics_calculator_version: 1</p>
-<p>TODO:  put the ML charts in here!</p>
+<p><img alt="Solver miniML plot" src="plot_solver_5dad4064-cd11-412f-85cb-d722afe3b3de.png" /></p>
+<p><img alt="SHAP summary plot" src="shap_summary_plot_solver_5dad4064-cd11-412f-85cb-d722afe3b3de.png" /></p>
